native/include/sogen_dart.h

typedef struct sogen_dart_app sogen_dart_app;
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_find_module_by_address(
    sogen_dart_app *app, uint64_t address, int32_t *has_value,
    sogen_dart_linux_mapped_module *module);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_find_module_by_name(
    sogen_dart_app *app, const char *name_utf8, int32_t *has_value,
    sogen_dart_linux_mapped_module *module);
SOGEN_DART_EXPORT void
sogen_dart_linux_mapped_module_free(sogen_dart_linux_mapped_module *module);
SOGEN_DART_EXPORT void sogen_dart_linux_mapped_module_list_free(
    sogen_dart_linux_mapped_module_list *modules);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_linux_destroy(sogen_dart_app *app);
SOGEN_DART_EXPORT void sogen_dart_buffer_free(sogen_dart_buffer *buffer);
SOGEN_DART_EXPORT size_t sogen_dart_last_error(char *destination,
                                               size_t capacity);