native/include/generated/sogen_dart_generated.h

typedef uint64_t sogen_dart_hook_id;
typedef int32_t sogen_dart_status;
typedef int32_t sogen_dart_backend;
typedef int32_t sogen_dart_calling_convention;
typedef int32_t sogen_dart_api_action;
typedef struct sogen_dart_api_call {
  const char *module_utf8;
  const char *name_utf8;
  uint64_t address;
  uint64_t return_address;
  uint64_t return_value;
} sogen_dart_api_call;
typedef struct sogen_dart_buffer {
  uint8_t *data;
  size_t length;
} sogen_dart_buffer;
typedef struct sogen_dart_memory_stats {
  uint64_t reserved_memory;
  uint64_t committed_memory;
} sogen_dart_memory_stats;
typedef struct sogen_dart_memory_region {
  uint64_t start;
  uint64_t length;
  int32_t permissions;
  uint64_t allocation_base;
  uint64_t allocation_length;
  int32_t is_reserved;
  int32_t is_committed;
  int32_t initial_permissions;
  int32_t kind;
} sogen_dart_memory_region;
typedef struct sogen_dart_windows_process_info {
  int32_t is_wow64_process;
  int32_t has_exit_status;
  uint32_t exit_status;
  uint64_t live_thread_count;
  uint32_t spawned_thread_count;
  int32_t has_active_thread;
  uint32_t active_thread_id;
} sogen_dart_windows_process_info;
typedef struct sogen_dart_windows_thread_info {
  uint32_t id;
  uint64_t start_address;
  uint64_t argument;
  uint64_t executed_instructions;
  uint64_t current_ip;
  uint64_t previous_ip;
  int32_t setup_done;
  int32_t has_exit_status;
  uint32_t exit_status;
} sogen_dart_windows_thread_info;
typedef struct sogen_dart_exported_symbol {
  const uint8_t *name_utf8;
  size_t name_length;
  uint64_t ordinal;
  uint64_t rva;
  uint64_t address;
} sogen_dart_exported_symbol;
typedef struct sogen_dart_mapped_module {
  const uint8_t *name_utf8;
  size_t name_length;
  const uint8_t *path_utf8;
  size_t path_length;
  const uint8_t *module_path_utf8;
  size_t module_path_length;
  uint64_t image_base;
  uint64_t image_base_file;
  uint64_t size_of_image;
  uint64_t entry_point;
  const sogen_dart_exported_symbol *exports;
  size_t export_count;
  int32_t is_static;
} sogen_dart_mapped_module;
typedef struct sogen_dart_windows_environment_entry {
  const char *name_utf8;
  const char *value_utf8;
} sogen_dart_windows_environment_entry;
typedef struct sogen_dart_windows_path_mapping {
  const char *guest_path_utf8;
  const char *host_path_utf8;
} sogen_dart_windows_path_mapping;
typedef struct sogen_dart_windows_port_mapping {
  uint16_t emulator_port;
  uint16_t host_port;
} sogen_dart_windows_port_mapping;
typedef struct sogen_dart_windows_emulator_options {
  const char *emulation_root_utf8;
  const char *registry_directory_utf8;
  int32_t backend;
  int32_t disable_logging;
  int32_t use_relative_time;
  const sogen_dart_windows_path_mapping *path_mappings;
  size_t path_mapping_count;
  const sogen_dart_windows_port_mapping *port_mappings;
  size_t port_mapping_count;
  uint32_t number_of_processors;
  uint32_t nt_product_type;
} sogen_dart_windows_emulator_options;
typedef struct sogen_dart_windows_application_options {
  const char *application_utf8;
  const char *const *arguments_utf8;
  size_t argument_count;
  const sogen_dart_windows_environment_entry *environment;
  size_t environment_count;
  const char *working_directory_utf8;
} sogen_dart_windows_application_options;
typedef struct sogen_dart_linux_memory_stats {
  uint64_t region_count;
  uint64_t mapped_bytes;
  uint64_t executable_bytes;
} sogen_dart_linux_memory_stats;
typedef struct sogen_dart_linux_process_info {
  int32_t has_exit_status;
  int32_t exit_status;
  uint32_t pid;
  uint32_t ppid;
  uint32_t uid;
  uint32_t gid;
  uint32_t euid;
  uint32_t egid;
  uint64_t thread_count;
  int32_t has_active_thread;
  uint32_t active_thread_id;
} sogen_dart_linux_process_info;
typedef struct sogen_dart_linux_thread_info {
  uint32_t tid;
  uint64_t stack_base;
  uint64_t stack_size;
  uint64_t fs_base;
  uint64_t current_ip;
  uint64_t start_address;
  int32_t wait_state;
  int32_t setup_done;
  int32_t terminated;
  int32_t exit_code;
  uint64_t executed_instructions;
} sogen_dart_linux_thread_info;
typedef struct sogen_dart_linux_thread_list {
  sogen_dart_linux_thread_info *data;
  size_t length;
} sogen_dart_linux_thread_list;
typedef struct sogen_dart_memory_region_list {
  sogen_dart_memory_region *data;
  size_t length;
} sogen_dart_memory_region_list;
typedef struct sogen_dart_buffer_list {
  sogen_dart_buffer *data;
  size_t length;
} sogen_dart_buffer_list;
typedef struct sogen_dart_linux_exported_symbol {
  sogen_dart_buffer name_utf8;
  uint64_t rva;
  uint64_t address;
} sogen_dart_linux_exported_symbol;
typedef struct sogen_dart_linux_exported_symbol_list {
  sogen_dart_linux_exported_symbol *data;
  size_t length;
} sogen_dart_linux_exported_symbol_list;
typedef struct sogen_dart_linux_mapped_section {
  sogen_dart_buffer name_utf8;
  uint64_t start;
  uint64_t length;
  int32_t permissions;
} sogen_dart_linux_mapped_section;
typedef struct sogen_dart_linux_mapped_section_list {
  sogen_dart_linux_mapped_section *data;
  size_t length;
} sogen_dart_linux_mapped_section_list;
typedef struct sogen_dart_linux_mapped_module {
  sogen_dart_buffer name_utf8;
  sogen_dart_buffer path_utf8;
  uint64_t image_base;
  uint64_t size_of_image;
  uint64_t entry_point;
  sogen_dart_linux_exported_symbol_list exports;
  sogen_dart_buffer_list needed_libraries;
  sogen_dart_linux_mapped_section_list sections;
  sogen_dart_buffer rpath_utf8;
  sogen_dart_buffer runpath_utf8;
} sogen_dart_linux_mapped_module;
typedef struct sogen_dart_linux_mapped_module_list {
  sogen_dart_linux_mapped_module *data;
  size_t length;
} sogen_dart_linux_mapped_module_list;