lib/src/ffi/sogen_native_bindings.g.dart


  late final _sogen_dart_linux_find_module_by_addressPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<sogen_dart_linux_mapped_module>,
          )
        >
      >('sogen_dart_linux_find_module_by_address');
  late final _sogen_dart_linux_find_module_by_address =
      _sogen_dart_linux_find_module_by_addressPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<sogen_dart_linux_mapped_module>,
            )
          >();

  int sogen_dart_linux_find_module_by_name(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Int32> hasValue,
    ffi.Pointer<sogen_dart_linux_mapped_module> module,
  ) => _sogen_dart_linux_find_module_by_name(app, name, hasValue, module);

  late final _sogen_dart_linux_find_module_by_namePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<sogen_dart_linux_mapped_module>,
          )
        >
      >('sogen_dart_linux_find_module_by_name');
  late final _sogen_dart_linux_find_module_by_name =
      _sogen_dart_linux_find_module_by_namePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<sogen_dart_linux_mapped_module>,
            )
          >();

  void sogen_dart_linux_mapped_module_free(
    ffi.Pointer<sogen_dart_linux_mapped_module> module,
  ) => _sogen_dart_linux_mapped_module_free(module);

  late final _sogen_dart_linux_mapped_module_freePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<sogen_dart_linux_mapped_module>)
        >
      >('sogen_dart_linux_mapped_module_free');
  late final _sogen_dart_linux_mapped_module_free =
      _sogen_dart_linux_mapped_module_freePtr
          .asFunction<
            void Function(ffi.Pointer<sogen_dart_linux_mapped_module>)
          >();

  void sogen_dart_linux_mapped_module_list_free(
    ffi.Pointer<sogen_dart_linux_mapped_module_list> modules,
  ) => _sogen_dart_linux_mapped_module_list_free(modules);

  late final _sogen_dart_linux_mapped_module_list_freePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<sogen_dart_linux_mapped_module_list>)
        >
      >('sogen_dart_linux_mapped_module_list_free');
  late final _sogen_dart_linux_mapped_module_list_free =
      _sogen_dart_linux_mapped_module_list_freePtr
          .asFunction<
            void Function(ffi.Pointer<sogen_dart_linux_mapped_module_list>)
          >();

  int sogen_dart_linux_destroy(ffi.Pointer<sogen_dart_app> app) {
    return _sogen_dart_linux_destroy(app);
  }

  late final _sogen_dart_linux_destroyPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>)
        >
      >('sogen_dart_linux_destroy');
  late final _sogen_dart_linux_destroy = _sogen_dart_linux_destroyPtr
      .asFunction<int Function(ffi.Pointer<sogen_dart_app>)>();

  void sogen_dart_buffer_free(ffi.Pointer<sogen_dart_buffer> buffer) {
    return _sogen_dart_buffer_free(buffer);
  }

  late final _sogen_dart_buffer_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<sogen_dart_buffer>)>
      >('sogen_dart_buffer_free');
  late final _sogen_dart_buffer_free = _sogen_dart_buffer_freePtr
      .asFunction<void Function(ffi.Pointer<sogen_dart_buffer>)>();

  int sogen_dart_last_error(ffi.Pointer<ffi.Char> destination, int capacity) {
    return _sogen_dart_last_error(destination, capacity);
  }

  late final _sogen_dart_last_errorPtr =
      _lookup<
        ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Char>, ffi.Size)>
      >('sogen_dart_last_error');
  late final _sogen_dart_last_error = _sogen_dart_last_errorPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();
}

typedef sogen_dart_backend = ffi.Int32;
typedef Dartsogen_dart_backend = int;
typedef sogen_dart_calling_convention = ffi.Int32;
typedef Dartsogen_dart_calling_convention = int;
typedef sogen_dart_api_action = ffi.Int32;
typedef Dartsogen_dart_api_action = int;

final class sogen_dart_app extends ffi.Opaque {}

typedef sogen_dart_hook_id = ffi.Uint64;
typedef Dartsogen_dart_hook_id = int;
typedef sogen_dart_status = ffi.Int32;
typedef Dartsogen_dart_status = int;

final class sogen_dart_api_call extends ffi.Struct {
  external ffi.Pointer<ffi.Char> module_utf8;

  external ffi.Pointer<ffi.Char> name_utf8;

  @ffi.Uint64()
  external int address;

  @ffi.Uint64()
  external int return_address;

  @ffi.Uint64()
  external int return_value;
}

final class sogen_dart_buffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int length;
}

final class sogen_dart_memory_stats extends ffi.Struct {
  @ffi.Uint64()
  external int reserved_memory;

  @ffi.Uint64()
  external int committed_memory;
}

final class sogen_dart_memory_region extends ffi.Struct {
  @ffi.Uint64()
  external int start;

  @ffi.Uint64()
  external int length;

  @ffi.Int32()
  external int permissions;

  @ffi.Uint64()
  external int allocation_base;

  @ffi.Uint64()
  external int allocation_length;

  @ffi.Int32()
  external int is_reserved;

  @ffi.Int32()
  external int is_committed;

  @ffi.Int32()
  external int initial_permissions;

  @ffi.Int32()
  external int kind;
}

final class sogen_dart_windows_process_info extends ffi.Struct {
  @ffi.Int32()
  external int is_wow64_process;

  @ffi.Int32()
  external int has_exit_status;

  @ffi.Uint32()
  external int exit_status;

  @ffi.Uint64()
  external int live_thread_count;

  @ffi.Uint32()
  external int spawned_thread_count;

  @ffi.Int32()
  external int has_active_thread;

  @ffi.Uint32()
  external int active_thread_id;
}

final class sogen_dart_windows_thread_info extends ffi.Struct {
  @ffi.Uint32()
  external int id;

  @ffi.Uint64()
  external int start_address;

  @ffi.Uint64()
  external int argument;

  @ffi.Uint64()
  external int executed_instructions;

  @ffi.Uint64()
  external int current_ip;

  @ffi.Uint64()
  external int previous_ip;

  @ffi.Int32()
  external int setup_done;

  @ffi.Int32()
  external int has_exit_status;

  @ffi.Uint32()
  external int exit_status;
}

final class sogen_dart_exported_symbol extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> name_utf8;

  @ffi.Size()
  external int name_length;

  @ffi.Uint64()
  external int ordinal;

  @ffi.Uint64()
  external int rva;

  @ffi.Uint64()
  external int address;
}

final class sogen_dart_mapped_module extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> name_utf8;

  @ffi.Size()
  external int name_length;

  external ffi.Pointer<ffi.Uint8> path_utf8;

  @ffi.Size()
  external int path_length;

  external ffi.Pointer<ffi.Uint8> module_path_utf8;

  @ffi.Size()
  external int module_path_length;

  @ffi.Uint64()
  external int image_base;

  @ffi.Uint64()
  external int image_base_file;

  @ffi.Uint64()
  external int size_of_image;

  @ffi.Uint64()
  external int entry_point;

  external ffi.Pointer<sogen_dart_exported_symbol> exports;

  @ffi.Size()
  external int export_count;

  @ffi.Int32()
  external int is_static;
}

final class sogen_dart_windows_environment_entry extends ffi.Struct {
  external ffi.Pointer<ffi.Char> name_utf8;

  external ffi.Pointer<ffi.Char> value_utf8;
}

final class sogen_dart_windows_path_mapping extends ffi.Struct {
  external ffi.Pointer<ffi.Char> guest_path_utf8;

  external ffi.Pointer<ffi.Char> host_path_utf8;
}

final class sogen_dart_windows_port_mapping extends ffi.Struct {
  @ffi.Uint16()
  external int emulator_port;

  @ffi.Uint16()
  external int host_port;
}

final class sogen_dart_windows_emulator_options extends ffi.Struct {
  external ffi.Pointer<ffi.Char> emulation_root_utf8;

  external ffi.Pointer<ffi.Char> registry_directory_utf8;

  @ffi.Int32()
  external int backend;

  @ffi.Int32()
  external int disable_logging;

  @ffi.Int32()
  external int use_relative_time;

  external ffi.Pointer<sogen_dart_windows_path_mapping> path_mappings;

  @ffi.Size()
  external int path_mapping_count;

  external ffi.Pointer<sogen_dart_windows_port_mapping> port_mappings;

  @ffi.Size()
  external int port_mapping_count;

  @ffi.Uint32()
  external int number_of_processors;

  @ffi.Uint32()
  external int nt_product_type;
}

final class sogen_dart_windows_application_options extends ffi.Struct {
  external ffi.Pointer<ffi.Char> application_utf8;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> arguments_utf8;

  @ffi.Size()
  external int argument_count;

  external ffi.Pointer<sogen_dart_windows_environment_entry> environment;

  @ffi.Size()
  external int environment_count;

  external ffi.Pointer<ffi.Char> working_directory_utf8;
}

final class sogen_dart_linux_memory_stats extends ffi.Struct {
  @ffi.Uint64()
  external int region_count;

  @ffi.Uint64()
  external int mapped_bytes;

  @ffi.Uint64()
  external int executable_bytes;
}

final class sogen_dart_linux_process_info extends ffi.Struct {
  @ffi.Int32()
  external int has_exit_status;

  @ffi.Int32()
  external int exit_status;

  @ffi.Uint32()
  external int pid;

  @ffi.Uint32()
  external int ppid;

  @ffi.Uint32()
  external int uid;

  @ffi.Uint32()
  external int gid;

  @ffi.Uint32()
  external int euid;

  @ffi.Uint32()
  external int egid;

  @ffi.Uint64()
  external int thread_count;

  @ffi.Int32()
  external int has_active_thread;

  @ffi.Uint32()
  external int active_thread_id;
}

final class sogen_dart_linux_thread_info extends ffi.Struct {
  @ffi.Uint32()
  external int tid;

  @ffi.Uint64()
  external int stack_base;

  @ffi.Uint64()
  external int stack_size;

  @ffi.Uint64()
  external int fs_base;

  @ffi.Uint64()
  external int current_ip;

  @ffi.Uint64()
  external int start_address;

  @ffi.Int32()
  external int wait_state;

  @ffi.Int32()
  external int setup_done;

  @ffi.Int32()
  external int terminated;

  @ffi.Int32()
  external int exit_code;

  @ffi.Uint64()
  external int executed_instructions;
}

final class sogen_dart_linux_thread_list extends ffi.Struct {
  external ffi.Pointer<sogen_dart_linux_thread_info> data;

  @ffi.Size()
  external int length;
}

final class sogen_dart_memory_region_list extends ffi.Struct {
  external ffi.Pointer<sogen_dart_memory_region> data;

  @ffi.Size()
  external int length;
}

final class sogen_dart_buffer_list extends ffi.Struct {
  external ffi.Pointer<sogen_dart_buffer> data;

  @ffi.Size()
  external int length;
}

final class sogen_dart_linux_exported_symbol extends ffi.Struct {
  external sogen_dart_buffer name_utf8;

  @ffi.Uint64()
  external int rva;

  @ffi.Uint64()
  external int address;
}

final class sogen_dart_linux_exported_symbol_list extends ffi.Struct {
  external ffi.Pointer<sogen_dart_linux_exported_symbol> data;

  @ffi.Size()
  external int length;
}

final class sogen_dart_linux_mapped_section extends ffi.Struct {
  external sogen_dart_buffer name_utf8;

  @ffi.Uint64()
  external int start;

  @ffi.Uint64()
  external int length;

  @ffi.Int32()
  external int permissions;
}

final class sogen_dart_linux_mapped_section_list extends ffi.Struct {
  external ffi.Pointer<sogen_dart_linux_mapped_section> data;

  @ffi.Size()
  external int length;
}

final class sogen_dart_linux_mapped_module extends ffi.Struct {
  external sogen_dart_buffer name_utf8;

  external sogen_dart_buffer path_utf8;

  @ffi.Uint64()
  external int image_base;

  @ffi.Uint64()
  external int size_of_image;

  @ffi.Uint64()
  external int entry_point;
